# fast-colorthief

./: CMakeLists.txt  README.md  fast_colorthief.py  setup.cfg  setup.py
.github/workflows/: release_default.yml  release_linux.yml  release_source_distribution.yml
cpp/: cmap.hpp  fast_colorthief_backend.cpp
tests/: test_fast_colorthief.py
